@@ -1692,7 +1692,8 @@ TclZlibCmd(
 	    start = Tcl_ZlibAdler32(0, NULL, 0);
 	}
 	data = Tcl_GetByteArrayFromObj(objv[2], &dlen);
-	Tcl_SetIntObj(obj, (int) Tcl_ZlibAdler32(start, data, dlen));
+	Tcl_SetWideIntObj(obj,
+		(Tcl_WideInt) Tcl_ZlibAdler32(start, data, dlen));
 	return TCL_OK;
     case z_crc32:			/* crc32 str ?startvalue?
 					 * -> checksum */
@@ -1708,7 +1709,8 @@ TclZlibCmd(
 	    start = Tcl_ZlibCRC32(0, NULL, 0);
 	}
 	data = Tcl_GetByteArrayFromObj(objv[2], &dlen);
-	Tcl_SetIntObj(obj, (int) Tcl_ZlibCRC32(start, data, dlen));
+	Tcl_SetWideIntObj(obj,
+		(Tcl_WideInt) Tcl_ZlibCRC32(start, data, dlen));
 	return TCL_OK;
     case z_deflate:			/* deflate data ?level?
 					 * -> rawCompressedData */
@@ -2262,7 +2264,7 @@ ZlibStreamCmd(
 	    Tcl_WrongNumArgs(interp, 2, objv, NULL);
 	    return TCL_ERROR;
 	}
-	Tcl_SetIntObj(obj, Tcl_ZlibStreamChecksum(zstream));
+	Tcl_SetWideIntObj(obj, (Tcl_WideInt) Tcl_ZlibStreamChecksum(zstream));
 	return TCL_OK;
     case zs_reset:		/* $strm reset */
 	if (objc != 2) {
@@ -2527,7 +2529,7 @@ ChanGetOption(
 	    crc = cd->inStream.adler;
 	}
 
-	sprintf(buf, "0x%lx", crc);
+	sprintf(buf, "%lu", crc);
 	if (optionName == NULL) {
 	    Tcl_DStringAppendElement(dsPtr, "-checksum");
 	    Tcl_DStringAppendElement(dsPtr, buf);
@@ -2836,7 +2838,7 @@ Tcl_ZlibStreamEof(
 }
 
 int
-Tcl_ZlibStreamAdler32(
+Tcl_ZlibStreamChecksum(
     Tcl_ZlibStream zshandle)
 {
     return 0;
